tests/Unit/PHPStan/Rules/Architecture/Fixtures/NoServiceInstantiation/Valid/FactoryCreatedService.php
<?php

declare(strict_types=1);

namespace NoServiceInstantiationFixtures\Valid;

final class FactoryCreatedService
{
    public function execute(): void
    {
    }
}
