tests/Unit/PHPStan/Rules/Architecture/Fixtures/NoServiceInstantiation/Invalid/HttpClient.php
<?php

declare(strict_types=1);

namespace NoServiceInstantiationFixtures\Invalid;

final class HttpClient
{
    public function request(): void
    {
    }
}
